refactor: remove obsolete message entities and unused service methods